==> anthonyagarza2/qmk_firmware/quantum/rgblight.c <==
#include <avr/eeprom.h>
#include <avr/interrupt.h>
#include <util/delay.h>
#include "progmem.h"
#include "timer.h"
#include "rgblight.h"
#include "debug.h"

void sethsv(uint16_t hue, uint8_t sat, uint8_t val, struct cRGB *led1) {
	/* convert hue, saturation and brightness ( HSB/HSV ) to RGB
	The DIM_CURVE is used only on brightness/value and on saturation (inverted).
	This looks the most natural.
	*/
  uint8_t r, g, b;

  val = pgm_read_byte(&DIM_CURVE[val]);
	sat = 255 - pgm_read_byte(&DIM_CURVE[255 - sat]);

	uint8_t base;

	if (sat == 0) { // Acromatic color (gray). Hue doesn't mind.
		r = val;
		g = val;
		b = val;
	} else  {
		base = ((255 - sat) * val) >> 8;

		switch (hue / 60) {
		case 0:
			r = val;
			g = (((val - base)*hue) / 60) + base;
			b = base;
			break;

		case 1:
			r = (((val - base)*(60 - (hue % 60))) / 60) + base;
			g = val;
			b = base;
			break;

		case 2:
			r = base;
			g = val;
			b = (((val - base)*(hue % 60)) / 60) + base;
			break;

		case 3:
			r = base;
			g = (((val - base)*(60 - (hue % 60))) / 60) + base;
			b = val;
			break;

		case 4:
			r = (((val - base)*(hue % 60)) / 60) + base;
			g = base;
			b = val;
			break;

		case 5:
			r = val;
			g = base;
			b = (((val - base)*(60 - (hue % 60))) / 60) + base;
			break;
		}
	}
  setrgb(r,g,b, led1);
}

void rgblight_init(void) {
  debug_enable = 1; // Debug ON!
	dprintf("rgblight_init called.\n");
  rgblight_inited = 1;
	dprintf("rgblight_init start!\n");
  if (!eeconfig_is_enabled()) {
		dprintf("rgblight_init eeconfig is not enabled.\n");
    eeconfig_init();
		eeconfig_write_rgblight_default();
  }
  rgblight_config.raw = eeconfig_read_rgblight();
	if (!rgblight_config.mode) {
		dprintf("rgblight_init rgblight_config.mode = 0. Write default values to EEPROM.\n");
		eeconfig_write_rgblight_default();
		rgblight_config.raw = eeconfig_read_rgblight();
	}
	eeconfig_debug_rgblight(); // display current eeprom values

	rgblight_timer_init(); // setup the timer

  if (rgblight_config.enable) {
    rgblight_mode(rgblight_config.mode);
  }
}

void rgblight_timer_init(void) {
	static uint8_t rgblight_timer_is_init = 0;
	if (rgblight_timer_is_init) {
		return;
	}
	rgblight_timer_is_init = 1;
	/* Timer 3 setup */
	TCCR3B = _BV(WGM32) //CTC mode OCR3A as TOP
	      | _BV(CS30); //Clock selelct: clk/1
	/* Set TOP value */
	uint8_t sreg = SREG;
	cli();
	OCR3AH = (RGBLED_TIMER_TOP>>8)&0xff;
	OCR3AL = RGBLED_TIMER_TOP&0xff;
	SREG = sreg;
}

void rgblight_timer_enable(void) {
	TIMSK3 |= _BV(OCIE3A);
	dprintf("TIMER3 enabled.\n");
}

void rgblight_timer_disable(void) {
	TIMSK3 &= ~_BV(OCIE3A);
	dprintf("TIMER3 disabled.\n");
}
