==> genokolar/nrf52-keyboard/application/main/src/drivers/ws2812/rgblight.c <==
#include "rgblight.h"
#include "app_timer.h"
#include "config.h"
#include "eeconfig.h"
#include "led_tables.h"
#include "nrf_gpio.h"
#include "progmem.h"
#include "timer.h"
#include "wait.h"
#include <math.h>
#include <ble_keyboard.h>
#define RGBLIGHT_LIMIT_VAL 255
#define MIN(a, b) (((a) < (b)) ? (a) : (b))
#define MAX(a, b) (((a) > (b)) ? (a) : (b))
#define M_PI 3.14159265358979323846
#define M_E 2.71828182845904523536

void sethsv(uint16_t hue, uint8_t sat, uint8_t val, LED_TYPE* led1)
{
    uint8_t r = 0, g = 0, b = 0, base, color;

    if (val > RGBLIGHT_LIMIT_VAL) {
        val = RGBLIGHT_LIMIT_VAL; // limit the val
    }

    if (sat == 0) { // Acromatic color (gray). Hue doesn't mind.
        r = val;
        g = val;
        b = val;
    } else {
        base = ((255 - sat) * val) >> 8;
        color = (val - base) * (hue % 60) / 60;

        switch (hue / 60) {
        case 0:
            r = val;
            g = base + color;
            b = base;
            break;
        case 1:
            r = val - color;
            g = val;
            b = base;
            break;
        case 2:
            r = base;
            g = val;
            b = base + color;
            break;
        case 3:
            r = base;
            g = val - color;
            b = val;
            break;
        case 4:
            r = base + color;
            g = base;
            b = val;
            break;
        case 5:
            r = val;
            g = base;
            b = val - color;
            break;
        }
    }
    r = pgm_read_byte(&CIE1931_CURVE[r]);
    g = pgm_read_byte(&CIE1931_CURVE[g]);
    b = pgm_read_byte(&CIE1931_CURVE[b]);

    setrgb(r, g, b, led1);
}

void rgblight_init(void)
{
    if (!eeconfig_is_enabled()) {
        eeconfig_init();
        eeconfig_update_rgblight_default();
    }
    rgblight_config.raw = eeconfig_read_rgblight();
    if (!rgblight_config.mode) {
        eeconfig_update_rgblight_default();
        rgblight_config.raw = eeconfig_read_rgblight();
    }

#ifdef RGBLIGHT_ANIMATIONS
    rgblight_timer_init(); // setup the timer
#endif

    if (rgblight_config.enable) {
        rgblight_mode_noeeprom(rgblight_config.mode);
    }
}

void rgblight_timer_init(void)
{
    app_timer_create(&rgblight_timer, APP_TIMER_MODE_REPEATED, rgblight_animations_handler);
    rgblight_timer_enabled = true;
}

void rgblight_timer_enable(void)
{
    app_timer_start(rgblight_timer, APP_TIMER_TICKS(16), NULL);
    rgblight_timer_enabled = true;
}

void rgblight_timer_disable(void)
{
    app_timer_stop(rgblight_timer);
    rgblight_timer_enabled = false;
}
